Ux improvements and stream title updater (#417)
* change to size of video output on live page, perfomance metrics separated, conditionally rendered and formatted

* removed a few unused style rules, aspect ratio for output on live

* metrics style change, adding electron identifying at the end of recent events url

* some class changes, made output on live able to expand to full screen, small icon button changes

* merge fixes

* more updates to editing stream title

* twitch stream title updater

* yarn.lock fix

* lock from staging

* line

--- a/app/styles/buttons.less
+++ b/app/styles/buttons.less
@@ -54,7 +54,7 @@ button, .button {
   width: 100%;
 }
 
-.ico-btn {
+.icon-btn {
   font-size: 14px;
   cursor: pointer;
   margin-left: 10px;
@@ -63,6 +63,10 @@ button, .button {
   &:first-child {
     margin-left: inherit;
   }
+}
+
+.icon-btn--lg {
+  font-size: 15px;
 }
 
 .back-arrow {
