Twitch Game Update (#463)
* youtube changes

* game and community inputs for live view

* updates to game and communites inputs

* game update

* yt stream key set up

* yt title update

* remove communities stuff

* fix

--- a/app/app.less
+++ b/app/app.less
@@ -286,6 +286,12 @@ select {
     color: @night-text;
   }
 
+  a {
+    &:hover {
+      color: @white;
+    }
+  }
+
   .border {
     border: 1px solid transparent;
   }
