--- a/app/app.less
+++ b/app/app.less
@@ -33,6 +33,19 @@ h4 {
   color: @grey;
 }
 
+.label--essential {
+  background: @purple;
+  .radius;
+  .semibold;
+  text-transform: uppercase;
+  font-size: 9px;
+  color: white;
+  letter-spacing: .5px;
+  padding: 0px 4px;
+  margin-left: 10px;
+  line-height: 16px
+}
+
 .link {
   .semibold;
   color: @grey;
