--- a/app/styles/_colors.less
+++ b/app/styles/_colors.less
@@ -5,6 +5,7 @@
 @teal-bright: #20e5be;
 @yellow: #ffcd47;
 @red: #fc3e3f;
+@purple: #7042eb;
 @navy: #13242d;
 @navy-secondary: #09161d;
 @white: #ffffff;
