support multiline text (#540)

--- a/app/styles/inputs.less
+++ b/app/styles/inputs.less
@@ -30,7 +30,8 @@
 }
 
 input[type=text],
-input[type="password"] {
+input[type="password"],
+textarea {
   border: 1px solid @day-input-border;
   background: @day-input-bg;
   margin-bottom: 0;
@@ -156,7 +157,8 @@ input[type="password"] {
 
 .night-theme {
   input[type="text"],
-  input[type="password"] {
+  input[type="password"],
+  textarea {
     background: @night-secondary;
     color: @white;
     border-color: transparent;
