[WIP] Live view overhaul (#533)
* first pass at live dock

* more live dock stuff

* more live dock changes

* style changes for live view

* recording button changes

* style changes for live panel, start/end stream button now has dynamic classes to change color, new record button, split performance metric into software and stream

* cleaned up styling for performance stats, added icons for cpu and fps

* small fixes

* WIP refactor for stream info editing

* yarn lock change

* temporary moving stuff

* tmp trying to rename

* fix name

* media rules to make software more responsive, hiding live view at certain point

* small text style changes

* first pass at stream info into service

* first pass at update stream info going live page

* do not show stream info window if logged out

* add persistent setting for showing game info on live

* add live updating viewer count

* fixes from merge with ui branch, added icons, styling for stream info

* add midstreammode

*  add showEditStreamInfo function to live dock

* using getter for viewer count in template

* final style changes to edit info and live view, added link to edit info from live view panel

* fixed recording button

* handle loading and error states when fetching channel info

* update vue multiselect

* disable updating live stream info for youtube

* more disabling of youtube

* clean up Live.vue.ts

* fixes for new version of vue-multiselect

* disable footer on onboarding steps

* fix search

* fix the streaming test

--- a/app/app.less
+++ b/app/app.less
@@ -7,6 +7,11 @@ body {
   background: @white;
 }
 
+a {
+  .transition;
+  text-decoration: underline;
+}
+
 // Layout
 .page-container {
   display: flex;
@@ -50,6 +55,7 @@ h4 {
   .semibold;
   color: @grey;
   .transition;
+  text-decoration: none;
 
   &:hover {
     color: @navy;
@@ -61,6 +67,10 @@ h4 {
   letter-spacing: .7px;
 }
 
+.label--icon {
+  margin-right: 4px;
+}
+
 // Wrap classes 'dropdown__toggle' and 'dropdown__menu' in class 'dropdown'
 // On 'dropdown__toggle' use @click="showDropdown = !showDropdown"
 // On 'dropdown__menu' use v-if="showDropdown"
@@ -69,7 +79,8 @@ h4 {
   display: inline-block;
 }
 
-.dropdown__toggle, .slide-open__open {
+.dropdown__toggle,
+.slide-open__open {
   .semibold;
   color: @grey;
   text-transform: uppercase;
@@ -209,6 +220,7 @@ h4 {
     }
   }
 }
+
 .tabs {
   background: transparent;
   padding: 0;
@@ -248,7 +260,8 @@ h4 {
   &.disabled {
     opacity: 0.5;
 
-    &.checkbox input:checked~label, &.checkbox input~label {
+    &.checkbox input:checked~label,
+    &.checkbox input~label {
       &:before {
         border-color: gray;
         background: transparent;
@@ -256,6 +269,12 @@ h4 {
 
       &:after {color: gray}
     }
+  }
+}
+
+.checkbox {
+  label {
+    text-transform: none;
   }
 }
 
@@ -283,11 +302,13 @@ select {
 }
 
 // Vue transitions
-.slide-fade-enter-active, .slide-fade-leave-active {
+.slide-fade-enter-active,
+.slide-fade-leave-active {
   transition: all .3s ease;
 }
 
-.slide-fade-enter, .slide-fade-leave-to {
+.slide-fade-enter,
+.slide-fade-leave-to {
   transform: translateX(20px);
   opacity: 0;
 }
