--- a/app/styles/_colors.less
+++ b/app/styles/_colors.less
@@ -17,9 +17,9 @@
 @day-secondary: #F7F9F9;
 @day-hover: #F7F9F9;
 @day-border: #F0F2F2;
-@day-input-border: #d4d9dd;
-@day-input-bg: #FDFEFE;
-@day-focus-border: darken(#d4d9dd, 4%);
+@day-input-border: #E3E8EB;
+@day-input-bg: #FBFCFC;
+@day-focus-border: darken(#E3E8EB, 4%);
 
 @night-primary: #13242d;
 @night-secondary: #09161d;
