--- a/app/styles/mixins.less
+++ b/app/styles/mixins.less
@@ -28,6 +28,10 @@
   }
 }
 
+.aspect-ratio--16-9 {
+  .aspect-ratio(16,9);
+}
+
 // Box shadows
 .shadow {
   box-shadow: 0 6px 20px rgba(0,0,0,.2);
