--- a/app/styles/inputs.less
+++ b/app/styles/inputs.less
@@ -27,6 +27,12 @@
 
 .input-wrapper {
   width: 70%;
+
+  .checkbox {
+    &:last-child {
+      margin-right: 0;
+    }
+  }
 }
 
 input[type=text],
