--- a/docs/theme/layouts/default.hbs
+++ b/docs/theme/layouts/default.hbs
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="{{relativeURL "assets/css/main.css"}}">
     <link rel="stylesheet" href="{{relativeURL "assets/css/streamlabs.css"}}">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
 
@@ -44,6 +45,9 @@
 <div class="overlay"></div>
 <script src="{{relativeURL "assets/js/main.js"}}"></script>
 <script>if (location.protocol == 'file:') document.write('<script src="{{relativeURL "assets/js/search.js"}}"><' + '/script>');</script>
+
+<script src="{{relativeURL "assets/js/humps.js"}}"></script>
+<script src="{{relativeURL "assets/js/streamlabs.js"}}"></script>
 
 {{> analytics}}
 
