slight change to navy bg

--- a/app/styles/_colors.less
+++ b/app/styles/_colors.less
@@ -22,7 +22,7 @@
 @day-input-bg: #FBFCFC;
 @day-focus-border: darken(#E3E8EB, 4%);
 
-@night-primary: #13242d;
+@night-primary: #17242D;
 @night-secondary: #09161d;
 @night-accent-light: #2b383f;
 @night-accent-dark: #050F14;
