spacing and padding improvements on the top nav

--- a/app/app.less
+++ b/app/app.less
@@ -228,8 +228,8 @@ h4 {
 
 .tab-button {
   border-bottom: 1px solid transparent;
-  height: 45px;
-  margin-right: 10px;
+  height: 54px;
+  margin-right: 20px;
   text-transform: uppercase;
   font-size: 12px;
   .semibold;
@@ -239,6 +239,8 @@ h4 {
 
   .fa {
     margin-right: 4px;
+    font-size: 15px;
+    vertical-align: middle;
   }
 
   &.active,
