added new fonts folders for custom icon fonts, added discord link to top nav

--- a/app/styles/index.less
+++ b/app/styles/index.less
@@ -1,6 +1,7 @@
 @import "./_colors";
 @import "./buttons";
 @import "./classes";
+@import "./custom-icons";
 @import "./inputs";
 @import "./mixins";
 
