--- a/app/styles/buttons.less
+++ b/app/styles/buttons.less
@@ -1,4 +1,5 @@
-button, .button {
+button,
+.button {
   .transition;
 
   &:focus, &:visited {
@@ -163,6 +164,7 @@ button, .button {
   &:hover {
     border-color: rgba(251,72,76,.4);
     background: rgba(251,72,76,.12);
+    color: @red;
   }
 }
 
