--- a/app/styles/classes.less
+++ b/app/styles/classes.less
@@ -30,6 +30,15 @@
   width: 100%;
 }
 
+// Margins
+.margin-bot--20 {
+  margin-bottom: 20px;
+}
+
+.margin-right--20 {
+  margin-right: 20px;
+}
+
 .section {
   padding: 20px 20px 0;
   background: @day-primary;
