--- a/app/styles/classes.less
+++ b/app/styles/classes.less
@@ -11,7 +11,11 @@
   justify-content: space-between;
 }
 
-.flex--start {
+.flex--justify-start {
+  justify-content: flex-start;
+}
+
+.flex--align-start {
   align-items: flex-start;
 }
 
