--- a/app/styles/buttons.less
+++ b/app/styles/buttons.less
@@ -55,6 +55,16 @@ button,
   width: 100%;
 }
 
+.button--navigate {
+  background-color: #F8FAFB;
+  color: @navy;
+  line-height: 28px;
+
+  &:hover {
+    background-color: #F8FAFB;
+  }
+}
+
 .icon-btn {
   font-size: 14px;
   cursor: pointer;
