--- a/app/app.less
+++ b/app/app.less
@@ -1,5 +1,4 @@
 @import "./styles/index";
-@import "~sl-vue-tree/dist/sl-vue-tree-dark.css";
 
 body {
   color: @navy;
@@ -379,7 +378,7 @@ th {
 }
 
 // Night theme rules
-.night-theme {
+.Onight-theme {
   &.main {
     background: @night-primary;
     color: @night-text;
