--- a/app/app.less
+++ b/app/app.less
@@ -378,7 +378,7 @@ th {
 }
 
 // Night theme rules
-.Onight-theme {
+.night-theme {
   &.main {
     background: @night-primary;
     color: @night-text;
