icon fixes, nav menu background fix on night mode

--- a/app/styles/custom-icons.less
+++ b/app/styles/custom-icons.less
@@ -312,9 +312,16 @@
 .icon-stats:before {
   content: "\e95a";
 }
+.icon-studio-mode:before {
+  content: "\e965";
+}
 
 // rule to rotate arrow
 .icon-down.icon-right {
   display: inline-block;
   transform: rotate(-90deg);
+}
+.icon-down.icon-left {
+  display: inline-block;
+  transform: rotate(90deg);
 }
