changed studio mode icon, added tooltip to icon

--- a/app/styles/custom-icons.less
+++ b/app/styles/custom-icons.less
@@ -315,6 +315,10 @@
 .icon-studio-mode:before {
   content: "\e965";
 }
+.icon-studio-mode-3:before {
+  content: "\e963";
+}
+
 
 // rule to rotate arrow
 .icon-down.icon-right {
