move language to general settings

--- a/app/app.less
+++ b/app/app.less
@@ -4,12 +4,12 @@ body {
   color: @navy;
 }
 
-:not(input):not(textarea),
-:not(input):not(textarea)::after,
-:not(input):not(textarea)::before {
-    -webkit-user-select: none;
-    user-select: none;
-}
+//:not(input):not(textarea),
+//:not(input):not(textarea)::after,
+//:not(input):not(textarea)::before {
+//    -webkit-user-select: none;
+//    user-select: none;
+//}
 
 .main {
   background: @white;
