new design for patch notes, updated icon for global sync status, fixed color of sync icon on day mode, changed config to handle webms

--- a/app/styles/custom-icons.less
+++ b/app/styles/custom-icons.less
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'icomoon';
-  src: url('../fonts/icomoon.woff') format('woff');
+  src: url('../fonts/icomoon2.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
@@ -317,6 +317,9 @@
 }
 .icon-studio-mode-3:before {
   content: "\e963";
+}
+.icon-cloud-backup-2:before {
+  content: "\e967";
 }
 
 
