source selection mode

--- a/app/styles/inputs.less
+++ b/app/styles/inputs.less
@@ -87,6 +87,20 @@ textarea {
   }
 }
 
+.radio {
+  margin-bottom: 0;
+
+  label {
+    line-height: 20px;
+    cursor: pointer;
+
+    &:before {
+      background: transparent;
+      border-color: @day-input-border;
+    }
+  }
+}
+
 .multiselect {
   min-height: 36px;
 }
