--- a/app/app.less
+++ b/app/app.less
@@ -188,32 +188,25 @@ h4 {
   }
 }
 
+.slide-open {
+  position: relative;
+}
+
 .slide-open__menu {
   position: absolute;
-  background: @white;
-  right: 0;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  padding: 0 25px;
+  background: @day-secondary;
+  left: -100px;
+  right: -100px;
+  width: 170px;
+  margin: 0 auto;
+  bottom: 33px;
+  padding: 12px;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-direction: column;
   z-index: 10;
-}
-
-.slide-open__close {
-  position: absolute;
-  left: 25px;
-  .transition;
-}
-
-.slide-open__open,
-.slide-open__close {
-  .fa,
-  i {
-    font-size: 12px;
-  }
+  .radius;
+  .border;
+  .shadow;
 }
 
 .tabs {
@@ -350,7 +343,7 @@ th {
 
 .slide-fade-enter,
 .slide-fade-leave-to {
-  transform: translateX(20px);
+  transform: translateY(20px);
   opacity: 0;
 }
 
@@ -399,7 +392,9 @@ th {
   }
 
   .slide-open__menu {
-    background-color: @night-primary;
+    background-color: @night-secondary;
+    border-color: @night-secondary;
+    .night-shadow;
   }
 
   .slide-open__close {
