Add static Vue component with LESS styling

--- a/app/styles/custom-icons.less
+++ b/app/styles/custom-icons.less
@@ -318,6 +318,9 @@
 .icon-studio-mode-3:before {
   content: "\e963";
 }
+.icon-cloud-backup:before {
+  content: "\e968";
+}
 .icon-cloud-backup-2:before {
   content: "\e967";
 }
