--- a/app/styles/index.less
+++ b/app/styles/index.less
@@ -4,6 +4,7 @@
 @import "./custom-icons";
 @import "./inputs";
 @import "./mixins";
+@import "./tabs";
 @import "./tooltips";
 
 @import '~codemirror/lib/codemirror.css';
