--- a/app/app.less
+++ b/app/app.less
@@ -368,6 +368,10 @@ th {
     color: @white;
   }
 
+  ::placeholder {
+    opacity: .4;
+  }
+
   .checkbox {
     input:checked~label {
       color: @white;
