add code editor

--- a/app/styles/buttons.less
+++ b/app/styles/buttons.less
@@ -20,6 +20,12 @@ button,
   }
 }
 
+.button--disabled {
+  &:hover, &:focus {
+    background-color: inherit;
+  }
+}
+
 .button--trans {
   background: transparent;
   color: @grey;
