add goal validations

--- a/app/styles/inputs.less
+++ b/app/styles/inputs.less
@@ -51,7 +51,8 @@
 }
 
 input[type=text],
-input[type="password"],
+input[type=number],
+input[type=password],
 textarea {
   border: 1px solid @day-input-border;
   background: @day-input-bg;
@@ -233,6 +234,7 @@ textarea {
 .night-theme {
   input[type="text"],
   input[type="password"],
+  input[type="number"],
   textarea {
     background: @night-secondary;
     color: @white;
