Style disabled button

--- a/app/styles/buttons.less
+++ b/app/styles/buttons.less
@@ -21,8 +21,12 @@ button,
 }
 
 .button--disabled {
+  background-color: @grey;
+  cursor: default;
+
   &:hover, &:focus {
-    background-color: inherit;
+    background-color: @grey;
+    cursor: default;
   }
 }
 
