Add toast alerts and copy functionality

--- a/app/styles/classes.less
+++ b/app/styles/classes.less
@@ -108,3 +108,12 @@
 .toast-alert {
   background-color: @red !important;
 }
+
+.toast-busy {
+  background-color: @yellow !important;
+  margin-top: 250px !important;
+}
+
+.toast-success {
+  background-color: @teal !important;
+}
