--- a/app/styles/classes.less
+++ b/app/styles/classes.less
@@ -96,6 +96,12 @@
   }
 }
 
+
+.input-error {
+  color: @red;
+}
+
+
 // Tooltip for widgets
 .w-tooltip {
   position: absolute;
@@ -103,6 +109,7 @@
   top: -2px;
   font-size: 24px;
 }
+
 
 // Toasts
 .toast-alert {
