added sidebar and modules component

--- a/app/styles/mixins.less
+++ b/app/styles/mixins.less
@@ -101,6 +101,14 @@
   padding-right: 0;
 }
 
+.padding--10 {
+  padding: 10px;
+}
+
+.padding--20 {
+  padding: 20px;
+}
+
 // Shadows
 .shadow {
   box-shadow: 0 6px 14px @shadow;
