--- a/app/styles/custom-icons.less
+++ b/app/styles/custom-icons.less
@@ -24,6 +24,9 @@
 .icon-dashboard:before {
   content: "\e95d";
 }
+.icon-chatbot:before {
+  content: "\e90d";
+}
 .icon-discord:before {
   content: "\e95e";
 }
