fixing w-textarea-input metadata to be of type Text and not basic Input, and update textarea font size to match twitchalertscss

--- a/app/styles/inputs.less
+++ b/app/styles/inputs.less
@@ -54,6 +54,7 @@ input[type=text],
 input[type=number],
 input[type=password],
 textarea {
+  font-size: 13px;
   border: 1px solid @day-input-border;
   background: @day-input-bg;
   margin-bottom: 0;
