move around imports to prevent copying lots of CSS classes

--- a/app/app.less
+++ b/app/app.less
@@ -1,4 +1,8 @@
 @import "./styles/index";
+@import "./styles/buttons";
+@import "./styles/custom-icons";
+@import "./styles/inputs";
+@import "./styles/tooltips";
 
 body {
   color: @navy;
