--- a/app/styles/_colors.less
+++ b/app/styles/_colors.less
@@ -96,6 +96,7 @@
 
 @night-bg: #17242D;
 @night-section: #09161D;
+@night-section-alt: #2B383F;
 @night-title: #FFFFFF;
 @night-paragraph: #BDC2C4;
 @night-button: #2B383F;
