icon fix for scene transitions, night mode table color fix

--- a/app/app.less
+++ b/app/app.less
@@ -466,15 +466,8 @@ th {
     border-color: @night-accent-dark;
   }
 
-  .table {
+  table {
     color: @night-paragraph;
-
-    i,
-    .fa,
-    .fas,
-    .far {
-      .night-icon-hover();
-    }
   }
 
   tbody {
