new alert mini modal added

--- a/app/app.less
+++ b/app/app.less
@@ -362,6 +362,10 @@ th {
     background-color: @night-primary;
   }
 
+  .v--modal-overlay {
+    background: rgba(0, 0, 0, 0.5);
+  }
+
   a {
     &:hover {
       color: @white;
