--- a/app/styles/_colors.less
+++ b/app/styles/_colors.less
@@ -93,6 +93,10 @@
 @day-paragraph: #4F5E65;
 @day-input-border: #E3E8EB;
 @day-button: #E3E8EB;
+@day-link: #4F5E65;
+@day-link-active: #09161D;
+@day-input-border: #E3E8EB;
+@day-input-background: transparent;
 
 @night-bg: #17242D;
 @night-section: #09161D;
@@ -100,3 +104,7 @@
 @night-title: #FFFFFF;
 @night-paragraph: #BDC2C4;
 @night-button: #2B383F;
+@night-link: #BDC2C4;
+@night-link-active: #FFFFFF;
+@night-input-border: #2B383F;
+@night-input-background: #2B383F;
