--- a/app/styles/buttons.less
+++ b/app/styles/buttons.less
@@ -1,8 +1,15 @@
 .button {
-  .transition;
-  .radius;
-  .letter-spacing;
+  .transition();
+  .radius();
+  .letter-spacing();
   border: 1px solid transparent;
+  margin: 0;
+  .weight--medium();
+  font-family: 'Roboto';
+  text-transform: capitalize;
+  height: 36px;
+  line-height: 34px;
+  padding: 0 12px;
 
   &:focus,
   &:visited {
